--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="src/assets/chat_chatting_communication_conversation_email_mail_message_icon_123226.ico" type="image/x-icon">nk
+    <link rel="shortcut icon" href="src/assets/chat_chatting_communication_conversation_email_mail_message_icon_123226.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <title>Letmeask</title>
   </head>
   <body>
